--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,8 @@
   </header>
 
   <div class="feedback md:flex md:justify-center mb-6 py-5 m-8 bg-gradient-to-r from-green-300 to-blue-300">
-    <form class="w-full max-w-lg">
-      <h1 class="md:flex md:font-serif text-5xl md:justify-center py-5">Send us Your Thoughts</h1>
+    <form class="w-full max-w-lg py-3">
+      <h1 class="md:flex md:font-serif text-5xl md:justify-center py-5 text-center">Send us Your Thoughts</h1>
       <div class="flex flex-wrap -mx-3 mb-6">
         <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
           <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
